# rebel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
etc/: rebel  rebel.rc
src/: config.rs  main.rs  rebel.rs  status_line.rs
src/image/: browser.rs  config.rs  core.rs  env_.rs  inspector.rs  mod.rs  mu.rs  repl.rs
